# selfie-archive-cc-iarrc2018

./: .gitignore  README.md  hallo  karaibek'splik
CIRCUIT/: CIRCUIT.sh  README.md
CIRCUIT/lidar-app/: README.md
DRAG/: DRAG.sh
RPi-robot/knr.selfie.helloworld/: pom.xml  remotedebug.xml
RPi-robot/knr.selfie.motorhat/: pom.xml
RPi-robot/knr.selfie.robot/: pom.xml  remotedebug.xml
cpp-opencv-app/: README.md  main.cpp
cpp-opencv-app/Jetson/: Algorytm_jeden_punkt_multiplatformowy.cpp
cpp-opencv-app/Sklejanie_obrazu/: CMakeLists.txt  main.cpp
cpp-opencv-app/UART_test/: main.cpp
cpp-opencv-app/UART_test_pakowania_danych_LINUX/: main.cpp
cpp-opencv-app/app/: README.md
cpp-opencv-app/opencv-app/: CMakeLists.txt  README.md  README.md~  main.cpp
cpp-opencv-app/tests/Jetson-TK1-main(old)/v3.3.1/opencv-app/: CMakeLists.txt
cpp-opencv-app/tests/Jetson-TK1-main(old)/v3.3.1/opencv-app/include/: uart_class.cpp  watchdog_class.hpp
cpp-opencv-app/trajectory-planning/: README.md
cpp-opencv-app/watchdog/: README.md
cpp-opencv-app/wersja_główna/: CMakeLists.txt  README.md  main.cpp
cpp-opencv-app/wersja_główna/v2.4.13/: CMakeLists.txt  main.cpp
cpp-opencv-app/wersja_główna/v2.4.13/include/: gpio_class.hpp
cpp-opencv-app/wersja_końcowa/: README.md
java-desktop-app/: README.md
knr.selfie.blinkingled/: pom.xml  remotedebug.xml.dist
knr.selfie.helloopencv/: pom.xml
lidar-app/lidar-app/: lidar-app.pro  (+1 more)
stm32-app/: .cproject  .mxproject  STM32F745VG_FLASH.ld  SelfieF7.ioc  SelfieF7.txt  Selfie_FreeRTOS.ioc  mx.scratch
stm32-atollic/: SelfieF7.rar
(+531 files in other folders)
